--- a/Modelo_Completo.ipynb
+++ b/Modelo_Completo.ipynb
@@ -1277,12 +1277,89 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "###  https://github.com/factordeveloper/Modelo_Completo_K-means_/blob/main/Consultando_Periodos.ipynb"
+      ],
       "metadata": {
         "id": "E2_4bAlMPAPA"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# K means"
+      ],
+      "metadata": {
+        "id": "A0_0Qp01Qqud"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.cluster import KMeans\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "# Cargar los archivos CSV\n",
+        "hogares = pd.read_csv('hogares_total_limpios_descargado.csv')\n",
+        "icfes = pd.read_csv('results_icfes_total.csv', delimiter=';')\n",
+        "\n",
+        "# Seleccionar las columnas de interés de cada dataset\n",
+        "hogares_selected = hogares[['personas', 'empleo_formal', 'desempleo_larga_duracion', 'acueducto', 'aseguramiento_salud', 'ipm']]\n",
+        "icfes_selected = icfes[['PUNT_MATEMATICAS', 'PUNT_INGLES', 'PUNT_SOCIALES_CIUDADANAS', 'PUNT_C_NATURALES', 'PUNT_GLOBAL']]\n",
+        "\n",
+        "# Asegurarte de que ambos datasets tienen el mismo número de filas\n",
+        "# Aquí asumimos que están alineados por el índice\n",
+        "# Si no es así, puedes usar un método como merge o join con una clave adecuada\n",
+        "combined_data = pd.concat([hogares_selected.reset_index(drop=True), icfes_selected.reset_index(drop=True)], axis=1).dropna()\n",
+        "\n",
+        "# Estandarizar los datos\n",
+        "scaler = StandardScaler()\n",
+        "scaled_data = scaler.fit_transform(combined_data)\n",
+        "\n",
+        "# Definir el modelo K-means con 3 clústeres\n",
+        "kmeans = KMeans(n_clusters=3, random_state=0)\n",
+        "\n",
+        "# Entrenar el modelo con los datos estandarizados\n",
+        "kmeans.fit(scaled_data)\n",
+        "\n",
+        "# Obtener los clústeres y asignarlos al DataFrame\n",
+        "combined_data['cluster'] = kmeans.labels_\n",
+        "\n",
+        "# Mostrar los primeros registros con sus clústeres asignados\n",
+        "print(combined_data.head())\n",
+        "\n",
+        "# Crear un gráfico de dispersión utilizando dos variables para visualizar los clústeres\n",
+        "plt.scatter(combined_data['PUNT_GLOBAL'], combined_data['ipm'], c=combined_data['cluster'], cmap='viridis')\n",
+        "plt.xlabel('Puntaje Global ICFES')\n",
+        "plt.ylabel('Índice de Pobreza Multidimensional (IPM)')\n",
+        "plt.title('Agrupación de Hogares según Puntaje Global y Condiciones del Hogar')\n",
+        "plt.colorbar(label='Cluster')\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o7BxtlgaQt7T",
+        "outputId": "6c26697c-f4eb-4c21-eae0-c82e38334673"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-7-38b4649f2637>:7: DtypeWarning: Columns (29) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  hogares = pd.read_csv('hogares_total_limpios_descargado.csv')\n",
+            "<ipython-input-7-38b4649f2637>:8: DtypeWarning: Columns (45,46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+            "  icfes = pd.read_csv('results_icfes_total.csv', delimiter=';')\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
